--- a/Conhecimentos Bancários/index.html
+++ b/Conhecimentos Bancários/index.html
@@ -165,7 +165,13 @@
                 <li>Se há expectativa de aumento dos juros, a demanda é alta</li>
                 <li>Se há expectativa de queda dos juros, a demanda é baixa</li>
             </ul>
-            <p><strong>Emissão e Circulação</strong></p>
+
+            <h3>Multiplicador Monetário</h3>
+            <p>Os bancos comerciais têm a capacidade de aumentar a quantidade de M1 ao aumentar os depósitos à vista. Eles fazem isso emprestando dinheiro.</p>
+
+            <h4>Sistema de reservas fracionárias</h4>
+
+
         </section>
 
         <section>
