--- a/Matemática/index.html
+++ b/Matemática/index.html
@@ -188,8 +188,48 @@
 
             <h3>Taxa Nominal e Taxa Efetiva</h3>
             <p>Algumas questões irão trabalhar com essas duas taxas. Não podemos confundi-las na hora da prova. Iremos entender o que cada uma significa e como fazer a conversão entre elas.</p>
+
             <p><strong>Taxa Efetiva</strong></p>
-            <p></p>
+            <p>É a Taxa de Juros em que a unidade de tempo da Taxa <strong>é coincidente</strong> com a unidade de tempo do período de capitalização.</p>
+            <p>Exemplos:</p>
+            <ul>
+                <li>x = 5% ao mês capitalizados mensalmente</li>
+                <li>x = 8% ao trimestre capitalizados trimestralmente</li>
+            </ul>
+            <p>Perceba que a unidade de tempo da Taxa é coincidente com a unidade de tempo do período de capitalização.</p>
+
+            <p><strong>Taxa Nominal</strong></p>
+            <p>É a Taxa de Juros em que a unidade de tempo da Taxa <strong>NÃO É coincidente</strong> com a unidade de tempo do período de capitalização. </p>
+            <p>Exemplos:</p>
+            <ul>
+                <li>x = 10% ao bimestre capitalizados mensalmente</li>
+                <li>x = 12% ao semestre capitalizados bimestralmente</li>
+            </ul>
+
+            <p><strong>Conversão entre Taxa Nominal ↔ Taxa Efetiva</strong></p>
+            <p>Nas fórmulas matemáticas de Juros Compostos <strong>NÃO podemos utilizar a Taxa Nominal.</strong></p>
+            <p>Antes de proceder com os cálculos,<strong> certifique-se que a Taxa a ser utilizada é a Taxa Efetiva</strong>, ou seja, aquela em que a unidade de tempo da Taxa é coincidente com a unidade de tempo do período de capitalização.</p>
+            <p>Basta fazer uma simples divisão/multiplicação.</p>
+            <p>Exemplo:</p>
+            <p>x = 10% ao bimestre capitalizados mensalmente</p>
+            <p>Em 1 bimestre há 2 meses. Logo, a Taxa Efetiva será igual a:</p>
+            <p>10% / 2 = 5% ao mês capitalizados mensalmente</p>
+
+            <h3>Taxas Equivalentes</h3>
+            <p>Taxas Equivalentes são as taxas de juros com <strong>unidades de tempo diferentes</strong> que <strong>aplicadas a um mesmo Capital</strong>, por um mesmo período, sob o <u>regime de juros compostos</u>, produziriam <strong>o mesmo Montante</strong> (e, por consequência, mesmo Juro).</p>
+            <p>Diferentemente do que ocorre no Regime de Capitalização Simples, <u>em Juros Compostos</u>, <strong>as Taxas Equivalentes NÃO SÃO proporcionais.</strong></p>
+            <p>Para calcular a Taxa Equivalente, iremos tomar como base a <strong>potenciação</strong>.</p>
+            <p>Exemplo: Qual a Taxa composta bimestral Equivalente a 5% ao mês?</p>
+            <p>Observe que para calcular a Taxa bimestral temos de capitalizar a Taxa mensal por 2 meses (1 bimestre). Ou seja, a Taxa mensal de 5% capitalizada por 2 meses (1 bimestre) será igual a que Taxa Equivalente bimestral?</p>
+            <p>(1 + imensal)² = (1 + ibimestral)</p>
+            <p>(1 + 0,05)² = (1 + ibimestral)</p>
+            <p>1,05² = 1 + ibimestral</p>
+            <p>1,1025 = 1 + ibimestral</p>
+            <p>ibimestral = 1,1025 − 1 → 𝒊𝒃𝒊𝒎𝒆𝒔𝒕𝒓𝒂𝒍 = 𝟎, 𝟏𝟎𝟐𝟓 𝒐𝒖 𝟏𝟎,𝟐𝟓%</p>
+            <p>Então, <strong>5% ao mês é equivalente a 10,25% ao bimestre</strong>.</p>
+            <p>Isso quer dizer que, se aplicarmos essa Taxa em um mesmo Capital, por um mesmo período de tempo, em regime de Juros Compostos, produziria o mesmo Montante.</p>
+
+
 
         </section>
 
